# stm32

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
docs/: index.adoc  intro.adoc  links.adoc  meson.build  usage.adoc
include/stm32/: mcu.hpp.in  meson.build
include/stm32/common/: access.hpp  bittypes.hpp
include/stm32/stm32c011/: stm32c011.hpp
include/stm32/stm32c031/: stm32c031.hpp
include/stm32/stm32c051/: stm32c051.hpp
include/stm32/stm32c071/: stm32c071.hpp
include/stm32/stm32c091/: stm32c091.hpp
include/stm32/stm32c092/: stm32c092.hpp
include/stm32/stm32f0x0/: stm32f0x0.hpp
include/stm32/stm32f0x1/: stm32f0x1.hpp
include/stm32/stm32f0x2/: stm32f0x2.hpp
include/stm32/stm32f0x8/: stm32f0x8.hpp
include/stm32/stm32f100/: stm32f100.hpp
include/stm32/stm32f101/: stm32f101.hpp
include/stm32/stm32f102/: stm32f102.hpp
include/stm32/stm32f103/: stm32f103.hpp
include/stm32/stm32f107/: stm32f107.hpp
include/stm32/stm32f215/: stm32f215.hpp
include/stm32/stm32f217/: stm32f217.hpp
include/stm32/stm32f301/: stm32f301.hpp
include/stm32/stm32f302/: stm32f302.hpp
include/stm32/stm32f303/: stm32f303.hpp
include/stm32/stm32f373/: stm32f373.hpp
include/stm32/stm32f3x4/: stm32f3x4.hpp
include/stm32/stm32f3x8/: stm32f3x8.hpp
include/stm32/stm32f401/: stm32f401.hpp
include/stm32/stm32f405/: stm32f405.hpp
include/stm32/stm32f407/: stm32f407.hpp
include/stm32/stm32f410/: stm32f410.hpp
include/stm32/stm32f411/: stm32f411.hpp
include/stm32/stm32f412/: stm32f412.hpp
include/stm32/stm32f413/: stm32f413.hpp
include/stm32/stm32f415/: stm32f415.hpp
include/stm32/stm32f417/: stm32f417.hpp
include/stm32/stm32f423/: stm32f423.hpp
include/stm32/stm32f427/: stm32f427.hpp
include/stm32/stm32f429/: stm32f429.hpp
include/stm32/stm32f437/: stm32f437.hpp
include/stm32/stm32f439/: stm32f439.hpp
include/stm32/stm32f446/: stm32f446.hpp
scripts/: fetch_svd.py  svd2groov.py
subprojects/: groov.wrap
(+9940 files in other folders)
